--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <center>
             <a href="https://www.facebook.com/bomza.jantakol"target="_blank">FACEBOOK</a>
             <a href="https://www.facebook.com/bomza.jantakol"target="_blank">INSTAGRAM</a>
-
+            <a>Bata.V0.0.1</a>
+         
         </center>
     </Footer>
 </body>
